[tool.poetry]
name = "briscola-rl"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gymnasium = "^0.29.1"
stable-baselines3 = {extras = ["extra"], version = "^2.2.1"}
pytest = "^8.1.1"
wandb = "^0.16.4"
onnx = "^1.16.0"
onnxruntime = "^1.17.1"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
